test/log/store/vsstcb4_v_u32.txt
vsstcb4_v_u32.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vsstcb4_v_u32.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vsstcb4_v_u32.c:37:79: error: expected declaration specifiers or '...' before ')' token
   37 | void vsstcb4_v_u32_golden(uint32_t *base,int32_t *index,uint32_t value[4][16],) {
      |                                                                               ^
vsstcb4_v_u32.c: In function 'main':
vsstcb4_v_u32.c:63:5: warning: implicit declaration of function 'vsstcb4_v_u32_golden'; did you mean 'vsstcb4_v_u32_m'? [-Wimplicit-function-declaration]
   63 |     vsstcb4_v_u32_golden(exp_base,exp_index,exp_value,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~
      |     vsstcb4_v_u32_m
vsstcb4_v_u32.c:63:55: error: 'exp_result' undeclared (first use in this function)
   63 |     vsstcb4_v_u32_golden(exp_base,exp_index,exp_value,exp_result);
      |                                                       ^~~~~~~~~~
vsstcb4_v_u32.c:63:55: note: each undeclared identifier is reported only once for each function it appears in
vsstcb4_v_u32.c:69:9: error: 'i' undeclared (first use in this function)
   69 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb4_v_u32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vsstcb4_v_u32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vsstcb4_v_u32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vsstcb4_v_u32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed